Try fix 1.16.5 build